tests/baselines/reference/classExpressions.errors.txt
classExpressions.ts(3,5): error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.


==== classExpressions.ts (1 errors) ====
    interface A {}
    let x = class B implements A {
        prop: number;
        ~~~~
!!! error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.
        onStart(): void {
        }
        func = () => {
        }
    };